# events-ndjson

./: .gitignore  CLAUDE.md  HANDOFF_NPM.md  HANDOFF_PYPI.md  README.md
.github/workflows/: ci.yml  release-npm.yml  release.yml
cli/: events.py
conformance/: conformance.py  ts_runner.mjs
libraries/python/: README.md  pyproject.toml
libraries/python/events_ndjson/: __init__.py  _validate.py  cli.py  reader.py  registry.py  replay.py  types.py  writer.py
libraries/python/events_ndjson/schema/v1/streams/: agent_session.json  campaign.json
libraries/python/tests/: test_cli.py  test_envelope.py  test_reader.py  test_registry.py  test_replay.py  test_writer.py
libraries/typescript/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
libraries/typescript/schema/v1/: envelope.json
libraries/typescript/schema/v1/streams/: ai_ops_audit.json  gate_audit.json  pacing.json
libraries/typescript/src/: index.ts  reader.ts  registry.ts  replay.ts  types.ts  validate.ts  writer.ts
libraries/typescript/tests/: envelope.test.ts  reader.test.ts  registry.test.ts  replay.test.ts  writer.test.ts
scripts/: emit-status.py  run-tests.py
spec/: EVENTS_SPEC.md
spec/schema/v1/streams/: cost.json  runs.json
