[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "events-ndjson"
version = "0.1.0"
description = "Portable NDJSON telemetry event streams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "kjhholt-alt" }]
dependencies = [
    "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4"
]

[project.scripts]
events = "events_ndjson.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["events_ndjson*"]

[tool.setuptools.package-data]
events_ndjson = ["schema/v1/*.json", "schema/v1/streams/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=events_ndjson --cov-report=term-missing"
